--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MsgActivity"></activity>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MySQLiteOpenHelper"></activity>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MaintenanceActivity"></activity></application>
 
 </manifest>
