--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,12 +16,14 @@
         <activity
             android:name="com.example.originalaso_2014_002.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter android:lavel="@string/app_name">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-                <activity android:name="com.example.ASO_2014_002"></activity></intent-filter>
+            </intent-filter>
         </activity>
-    </application>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MsgActivity"></activity>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MySQLiteOpenHelper"></activity>
+        <activity android:label="@string/app_name" android:name="com.example.originalaso_2014_002.MaintenanceActivity"></activity></application>
 
-    <activity android:name="com.example.OriginalASO_2014_002.MsgActivity" android:lavel="@string/app_name"></activity></manifest>
+</manifest>
